Added properties files in project

--- a/cloud-configuration-server/src/main/resources/application.properties
+++ b/cloud-configuration-server/src/main/resources/application.properties
@@ -3,5 +3,8 @@ server.port=8888
 
 # Configuration management using file system
 spring.profiles.active=native
-spring.cloud.config.server.native.search-locations=file:///C:\\Priyanka\\Spring Cloud Microservices\\Labs\\SpringMicroserviceWS\\config-repo\\native\\{application}
+#spring.cloud.config.server.native.search-locations=file:///C:\\Priyanka\\Spring Cloud Microservices\\Labs\\SpringMicroserviceWS\\config-repo\\native\\{application}
+spring.cloud.config.server.native.search-locations=file:////Users/jayendrabirtharia/Documents/Coding/Java Projects/Microservice-Demo/config/native/currency-conversion-service/{application}
 
+# message
+app.message=Message for Main Profile from application.properties
