--- a/currency-conversion-service/src/main/resources/application-test.properties
+++ b/currency-conversion-service/src/main/resources/application-test.properties
@@ -20,4 +20,4 @@ spring.jpa.properties.hibernate.format_sql=false
 
 
 # message
-app.message=Message for Main Profile from application.properties
+app.message=Message for test Profile from application.properties
