--- a/cloud-configuration-server/src/main/resources/application.properties
+++ b/cloud-configuration-server/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=configuration-server
 server.port=8888
 
 # Configuration management using file system
-spring.profiles.active=native
-#spring.cloud.config.server.native.search-locations=file:///C:\\Priyanka\\Spring Cloud Microservices\\Labs\\SpringMicroserviceWS\\config-repo\\native\\{application}
-spring.cloud.config.server.native.search-locations=file:////Users/jayendrabirtharia/Documents/Coding/Java Projects/Microservice-Demo/config/native/currency-conversion-service/{application}
+#spring.profiles.active=native
+#spring.cloud.config.server.native.search-locations=file://${user.home}/Documents/config/native/{application}
 
-# message
-app.message=Message for Main Profile from application.properties
+# Configuration management using remote git repository
+spring.cloud.config.server.git.uri=https://github.com/jbirtharia/cloud-config-server.git
+
+spring.cloud.config.server.git.search-paths={application}
