--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -1,23 +1,11 @@
 spring.application.name=currency-conversion-service
 server.port=7101
 
-spring.datasource.url=jdbc:h2:mem:currency-conversion;DB_CLOSE_DELAY=1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.platform=h2
-spring.datasource.username=db-cc-user
-spring.datasource.password=db-cc-password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Configuration server settings
+spring.config.import=optional:configserver:http://127.0.0.1:8888
 
+# Set the profile
+spring.profiles.active=dev
 
-#H2 Settings
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-
-# Hibernate Settings
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=false
-spring.jpa.properties.hibernate.format_sql=false
-
-
-# message
-app.message=Message for Main Profile from application.properties
+# For exposing all endpoints of actuator
+management.endpoints.web.exposure.include=*
