--- a/currency-conversion-service/src/main/resources/application.properties
+++ b/currency-conversion-service/src/main/resources/application.properties
@@ -15,3 +15,7 @@ eureka.client.service-url.defaultZone=http://localhost:8010/eureka/
 eureka.client.fetchRegistry=true
 # How to name the service instance on the eureka server
 eureka.instance.instance-id=${spring.application.name}:${server.port}
+
+# Identify services using their IP-address rather than hostname
+# To resolve service location
+eureka.instance.prefer-ip-address=true
