--- a/flight-fare-service/src/main/resources/application.properties
+++ b/flight-fare-service/src/main/resources/application.properties
@@ -9,6 +9,8 @@ eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 # How to name the service instance on the eureka server
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
+# Logging configuration for Feign
+logging.level.com.training.boot.ms.feign=DEBUG
 
 # Cloud gateway
 # Flag to find every service from eureka server
