--- a/spring-cloud-netflix-eureka-server/src/main/resources/application.properties
+++ b/spring-cloud-netflix-eureka-server/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.application.name=eureka-server
+# Default port for eureka server is 8761
+server.port=8010
 
+# Define the service URL of eureka on local machine or AWS zones
+# On AWS - https://ec2-256-156-243-129.compute-1.amazonaws.com:7001/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8010/eureka
+
+
+# Disable configuration of client behaviour for eureka server
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
