--- a/flight-fare-service/src/main/resources/application.properties
+++ b/flight-fare-service/src/main/resources/application.properties
@@ -2,6 +2,12 @@
 spring.application.name=flight-fare-service
 server.port=7103
 
+# Configuration server settings. This service will act as client of Cloud Configuration Server.
+# So we are fetching all properties of this service from Cloud Configuration Server using below URL
+spring.config.import=optional:configserver:http://127.0.0.1:8888
+# Set the profile
+spring.profiles.active=default
+
 # Configuration Settings for Service Discovery
 # register application as client to Eureka
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
