--- a/flight-fare-service/src/main/resources/application.properties
+++ b/flight-fare-service/src/main/resources/application.properties
@@ -18,9 +18,6 @@ eureka.instance.instance-id=${spring.application.name}:${server.port}
 # Logging configuration for Feign
 logging.level.com.training.boot.ms.feign=DEBUG
 
-# Cloud gateway
-# Flag to find every service from eureka server
-spring.cloud.gateway.discovery.locator.enabled=true
-
-# To resolve the capital name of the service
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Identify services using their IP-address rather than hostname
+# To resolve service location
+eureka.instance.prefer-ip-address=true
