--- a/flight-api-gateway/src/main/resources/application.properties
+++ b/flight-api-gateway/src/main/resources/application.properties
@@ -9,9 +9,10 @@ eureka.client.service-url.defaultZone=http://localhost:8010/eureka
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
 
+# Automatic configuration
+# Manual Configuration will overwrite Automatic Configuration
 # Cloud gateway
 # Flag to find every service from eureka server
 spring.cloud.gateway.discovery.locator.enabled=true
-
 # To resolve the capital name of the service
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
