--- a/flight-api-gateway/src/main/resources/application.properties
+++ b/flight-api-gateway/src/main/resources/application.properties
@@ -3,10 +3,7 @@ server.port=8765
 
 # Configuration Settings for Service Discovery
 # register application as client to Eureka
-# eureka.client.service-url.defaultZone=http://localhost:8010/eureka
-
-# For Docker
-eureka.client.service-url.defaultZone=http://eureka-server:8010/eureka/
+eureka.client.service-url.defaultZone=http://${EUREKA_URL:localhost}:8010/eureka/
 # How to name the service instance on the eureka server
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
