--- a/flight-fare-service/src/main/resources/application.properties
+++ b/flight-fare-service/src/main/resources/application.properties
@@ -4,19 +4,13 @@ server.port=7103
 
 # Configuration server settings. This service will act as client of Cloud Configuration Server.
 # So we are fetching all properties of this service from Cloud Configuration Server using below URL
-# spring.config.import=optional:configserver:http://127.0.0.1:8888
-# For Docker
-spring.config.import=optional:configserver:http://cloud-configuration-server:8888
+spring.config.import=optional:configserver:http://${CLOUD_CONFIG_URL:127.0.0.1}:8888
 # Set the profile
 spring.profiles.active=default
 
 # Configuration Settings for Service Discovery
 # register application as client to Eureka
-# eureka.client.service-url.defaultZone=http://localhost:8010/eureka
-
-# For Docker
-eureka.client.service-url.defaultZone=http://eureka-server:8010/eureka/
-
+eureka.client.service-url.defaultZone=http://${EUREKA_URL:localhost}:8010/eureka/
 # How to name the service instance on the eureka server
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 
